chore: enrolledフラグはそのままで
